# Hamilton_Mechanics

./: CMakeLists.txt  main.cpp
src/: Dynamics.cpp  Dynamics.h
src/visual/: Mesh.cpp  Mesh.h  Visual.cpp  Visual.h
